src/objects/Contract_Variation__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approving_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Variation_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Variations</relationshipLabel>
        <relationshipName>Contract_Variations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Make changes to the contract.</description>
        <label>Description</label>
        <length>33000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Contract Variation</label>
    <nameField>
        <displayFormat>CV-{00000}</displayFormat>
        <label>Contract Variation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Variations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Add_additional_info_if_added_Appr_Manag</fullName>
        <active>true</active>
        <description>User must add Description if added Approval Manager</description>
        <errorConditionFormula>AND(
 NOT(
  ISBLANK( Approving_Manager__c )
 ),
 OR(
  ISBLANK( Description__c )
 )
)</errorConditionFormula>
        <errorMessage>Please enter the Description before adding the Approval Manager</errorMessage>
    </validationRules>
</CustomObject>